--- a/_config.yml
+++ b/_config.yml
@@ -6,16 +6,14 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Your awesome title
-email: your-email@domain.com
+title: Jake's Words on the Screen
+email: jake.bapple@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  This is a blog about coding. Primarily in HTML, CSS, and Javascript. Maybe more things. Who knows.
 baseurl: "/aca-blog" # the subpath of your site, e.g. /blog
-url: "http://yourdomain.com" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
+url: "http://bapplejax.github.io" # the base hostname & protocol for your site
+twitter_username: Jake_the_Drake
+github_username:  bapplejax
 
 # Build settings
 markdown: kramdown
